src/tests/unit/error/by/namespace.xcpp
// This by C++ 23 -*- c++ -*- -std=c++23 in the stylings of the S.C.O.L.D. design method.
// For terms and provenance see the LICENSE file at the top of the repository.
#divert <fpp>
#import tests.unit
#import tunitas.error.by
namespace tests::unit::error::by {
  namespace library = ::tunitas::error::by;
  namespace super = ::tunitas::error;
}
#endiv
